test(server): add core unit tests and JaCoCo coverage reports
Raise Sprint 2 quality-gate evidence with Mockito/boundary tests for
template, export, resume SUMMARY, job, and match validation paths.

Co-authored-by: Cursor <cursoragent@cursor.com>